--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
 
     <script>
         // (function() {
-            // const isDebug = true
+            const isDebug = false
 
 
             const prevImageBtnSelector = document.querySelector(`#prevImageBtn`)
