--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             margin: 0;
             background-color: black;
             overflow: hidden;
+            -webkit-user-select: none;
         }
 
         .header {
