--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Beezus | Freelance photographer</title>
     <link rel="apple-touch-icon" sizes="180x180" href="https://github.com/hecmocer-pro/BeezusPhotography/blob/main/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="https://github.com/hecmocer-pro/BeezusPhotography/blob/main/favicon-32x32.png?raw=true">
