--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             background-color: black;
             overflow: hidden;
             -webkit-user-select: none;
+            position: fixed;
         }
 
         .header {
